2007-09-17  Inge Wallin  <inge@lysator.liu.se>

	Add a main page to the APIdox
	* src/Mainpage.dox: New file

2007-09-16  Inge Wallin  <inge@lysator.liu.se>

	Add instruction about how to install into a non-standard prefix
	* INSTALL (-DCMAKE_INSTALL_PREFIX): add instructions

2007-09-15  Torsten Rahn  <rahn@kde.org>

	* src/lib/MarbleControlBox.{h,cpp}:
	- Disable ZoomIn/Out Buttons at range limit
	Patch by Frederik Schwarzer.

2007-09-15  Torsten Rahn  <rahn@kde.org>

	* src/lib/PlaceMarkInfoDialog.cpp:
	- Data Sheet -> Marble Info Center, as mentioned in the Marble
	  Quality Check.
	* BUGS:
	  Make ingwa happy.

2007-09-15  Torsten Rahn  <rahn@kde.org>

	- Add the icon for the menu in the Qt version ;-(

	* data/icons
	* data/icons/hi32-app-marble.png
	* data/icons/hi16-app-marble.png
	* data/icons/hi64-app-marble.png
	* data/icons/hi128-app-marble.png
	* data/icons/hi48-app-marble.png

2007-09-12  Torsten Rahn  <rahn@kde.org>

	- Various fixes related to finding and
	fixing possible memory leaks.

	* src/lib/gps/GpxFileModel.{h,cpp}
	* src/lib/TileLoader.{h,cpp}
	* src/lib/MarbleLegendBrowser.{h,cpp}
	* src/lib/CompassFloatItem.{h,cpp}
	* src/lib/MarbleControlBox.{h,cpp}
	* src/lib/PlaceMarkManager.{h,cpp}
	* src/lib/VectorComposer.{h,cpp}
	* src/lib/MapTheme.cpp
	* src/lib/MarbleWidget.cpp
	* src/lib/PlaceMarkModel.cpp
	* src/lib/MarbleModel.cpp
	* src/lib/TextureTile.cpp
	* src/lib/GeoPolygon.cpp

2007-09-12  Torsten Rahn  <rahn@kde.org>

	* src/QtMainWindow.cpp:
	* src/marble_part.cpp:
	- "Distance" -> "Altitude"
	as it got mixed up with the measure tool

2007-09-12  Torsten Rahn  <rahn@kde.org>

	* src/lib/ClipPainter.cpp:
	- Cut off on screen.

	* src/marble.qrc:
	* src/icons/wikipedia.png:
	* src/lib/PlaceMarkInfoDialog.ui:
	- Added a Wikipedia icon and a pointer towards the entry.

	* src/lib/TinyWebBrowser.cpp:
	- Make it compile on Qt 4.2, too.

2007-09-09  Torsten Rahn  <rahn@kde.org>

	* src/lib/MarbleWidgetInputHandler.cpp: