@@ -167,7 +167,7 @@ void MarbleWidget::construct(QWidget *parent)
              this,              SLOT( notifyMouseClick( int, int ) ) );
 
     connect( d->m_inputhandler, SIGNAL( mouseMoveGeoPosition( QString ) ),
-         this, SIGNAL( mouseMoveGeoPosition( QString ) ) );
+	     this,              SIGNAL( mouseMoveGeoPosition( QString ) ) );
 
     d->m_measureTool = new MeasureTool( this );
 
@@ -1187,16 +1187,19 @@ QString MarbleWidget::distanceString() const
 {
     const double VIEW_ANGLE = 110.0;
 
-    // Due to Marble's orthographic projection ("we have no focus") 
-    // it's actually not possible to calculate a "real" distance. 
-    // Additionally the viewing angle of the earth doesn't adjust to the window's 
-    // size.
-    // So the only possible workaround is to come up with a distance definition 
-    // which gives a reasonable approximation of reality. Therefore we assume that 
-    // the average window width (about 800 pixels) equals the viewing angle of a 
-    // human being.
-
-    double distance = EARTH_RADIUS * 400.0/(double)(radius()) / tan( 0.5 * VIEW_ANGLE * DEG2RAD );
+    // Due to Marble's orthographic projection ("we have no focus")
+    // it's actually not possible to calculate a "real" distance.
+    // Additionally the viewing angle of the earth doesn't adjust to
+    // the window's size.
+    //
+    // So the only possible workaround is to come up with a distance
+    // definition which gives a reasonable approximation of
+    // reality. Therefore we assume that the average window width
+    // (about 800 pixels) equals the viewing angle of a human being.
+    //
+    double distance = ( EARTH_RADIUS * 400.0
+			/ (double)( radius() )
+			/ tan( 0.5 * VIEW_ANGLE * DEG2RAD ) );
 
     return QString( "%L1 %2" ).arg( distance, 8, 'f', 1, QChar(' ') ).arg( tr("km") );
 }
